<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_agenda_uji"
            android:title="@string/menu_agendauji" />

        <item
            android:id="@+id/nav_sertifikat_dteknik"
            android:title="@string/menu_sertifikat_dteknik" />

        <item
            android:id="@+id/nav_sertifikat_kompetensi"
            android:title="@string/menu_sertifikatkompetensi" />
        <item
            android:id="@+id/nav_tenagateknik"
            android:title="@string/menu_tenagateknik" />

        <item
            android:id="@+id/nav_tenagateknik_dbelum"
            android:title="@string/menu_sertifikat_dteknik" />
        <item
            android:id="@+id/nav_ujikompetensi"
            android:title="@string/Rekap_UjiKompetensi" />

    </group>


</menu>
